--- a/OdeToFood.Web/Views/Home/Index.cshtml
+++ b/OdeToFood.Web/Views/Home/Index.cshtml
@@ -1,12 +1,25 @@
-﻿@{
+﻿@model IEnumerable<OdeToFood.Data.Models.Restaurant>
+
+@{
     ViewBag.Title = "Home Page";
 }
 
 <div class="jumbotron">
     <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    @DateTime.Now.Year
+    <div>
+        There are @Enumerable.Count(Model) number of restaurants in the DB. (if you dont use the razor directive)
+
+        There are @Model.Count() number of restaurants in the DB using the razor directive at line 1.
+    </div>
 </div>
+
+<ul>
+    @foreach (var restaurant in Model)
+    {
+        <li>@restaurant.Name</li>
+    }
+</ul>
 
 <div class="row">
     <div class="col-md-4">
