--- a/OdeToFood.Web/Views/Home/Index.cshtml
+++ b/OdeToFood.Web/Views/Home/Index.cshtml
@@ -6,39 +6,7 @@
 
 <div class="jumbotron">
     <h1>ASP.NET</h1>
-    @DateTime.Now.Year
     <div>
-        There are @Enumerable.Count(Model) number of restaurants in the DB. (if you dont use the razor directive)
-
-        There are @Model.Count() number of restaurants in the DB using the razor directive at line 1.
-    </div>
-</div>
-
-<ul>
-    @foreach (var restaurant in Model)
-    {
-        <li>@restaurant.Name</li>
-    }
-</ul>
-
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        There are @Model.Count() restaurants in the db.
     </div>
 </div>
